--- a/index.html
+++ b/index.html
@@ -2,11 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Red Sauce</title>
   </head>
   <body>
-    <div>
-      <img src="pics/logo.png" alt="red sauce logo">
+
+    <div class="top-header">
+        <div id="mini-menu">
+          <img src="pics/download.png" alt="menu">
+        </div>
+        <div id="top-logo">
+          <img src="pics/logo.png" alt="red sauce logo">
+        </div>
     </div>
+
+    <div class="picture-display">
+      <div class="pizza-pics">
+        <img src="pics/pizza1.jpg" alt="pizza image">
+      </div>
+      <div class="pizza-pics">
+        <img src="pics/pizza2.jpg" alt="pizza image">
+      <div class="pizza-pics">
+        <img src="pics/pizza3.jpg" alt="woman making pizza">
+      </div>
+      <div class="pizza-pics">
+        <img src="pics/pizza4.jpg" alt="pizza image">
+      </div>
+
+    </div>
+
+    <div class="right-column">
+    </div>
+
+
+
   </body>
 </html>
