--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <body>
 
     <div class="top-header">
-        <div id="mini-menu">
-          <img src="pics/download.png" alt="menu">
-        </div>
-        <div id="top-logo">
-          <img src="pics/logo.png" alt="red sauce logo">
-        </div>
+
+          <img src="pics/download.png" id="mini-menu" alt="menu">
+
+          <img src="pics/logo.png" id="top-logo "alt="red sauce logo">
+          <div></div>
     </div>
 
     <div class="picture-display">
@@ -31,7 +30,13 @@
 
     </div>
 
-    <div class="right-column">
+    <div class="middle">
+
+      <div class="right-column">
+      </div>
+      <div class="left-column">
+      </div>
+
     </div>
 
 
