--- a/index.html
+++ b/index.html
@@ -2,31 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/output.css">
     <title>Red Sauce</title>
   </head>
   <body>
 
     <div class="top-header">
-
           <img src="pics/download.png" id="mini-menu" alt="menu">
-
           <img src="pics/logo.png" id="top-logo "alt="red sauce logo">
           <div></div>
     </div>
 
     <div class="picture-display">
-      <div class="pizza-pics">
+
         <img src="pics/pizza1.jpg" alt="pizza image">
-      </div>
-      <div class="pizza-pics">
         <img src="pics/pizza2.jpg" alt="pizza image">
-      <div class="pizza-pics">
         <img src="pics/pizza3.jpg" alt="woman making pizza">
-      </div>
-      <div class="pizza-pics">
         <img src="pics/pizza4.jpg" alt="pizza image">
-      </div>
 
     </div>
 
