--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="top-header">
           <img src="pics/download.png" id="mini-menu" alt="menu">
           <img src="pics/logo.png" id="top-logo "alt="red sauce logo">
-          <div></div>
+          <div>
+          </div>
     </div>
 
     <div class="picture-display">
-
         <img src="pics/pizza1.jpg" alt="pizza image">
         <img src="pics/pizza2.jpg" alt="pizza image">
         <img src="pics/pizza3.jpg" alt="woman making pizza">
@@ -22,13 +22,29 @@
 
     </div>
 
-    <div class="middle">
+    <div .class="middle">
 
       <div class="right-column">
+        <div id="reservations">
+          <p>Reseration Policy</p>
+          <p>We accept parties of 8 persons or less only. We are only able to accept two parties of 8 per evening. We are unable to accept parties larger than 8, as our dining room is too small and it impacts the flow of service. We will only accept one party of 8 on Fridays or Saturdays, before 5:30pm. We do not split larger parties to two tables.</p>
+          <p>We encourage you to call ahead if you are a party of 4 or more. We can take reservations in advance or same day. Call 503-288-4899 for reservations.</p>
+          <p>If you have questions about the reservation policy, please contact the owners at redsaucepizzapdx[@]gmail.com. Thanks for understanding!!</p>
+
+        </div>
+        <img src ="img/pup.jpg" id="pup-pic" alt="happy pup">
+
       </div>
+
       <div class="left-column">
       </div>
 
+    </div>
+
+    <div class="bottom-bar">
+      <p>home | menu| pan pies | sourdough bread | fundraisers | say hi | our pals | swag </p>
+      <p>TAKE OUt 503-288-4899 | CLICK FOR DELIVERY</p>
+      <p>4935 NE 42ND Avenue, Portland, Oregon</p>
     </div>
 
 
