align pizza pics

--- a/index.html
+++ b/index.html
@@ -15,24 +15,32 @@
     </div>
 
     <div class="picture-display">
-        <img src="pics/pizza1.jpg" alt="pizza image">
-        <img src="pics/pizza2.jpg" alt="pizza image">
-        <img src="pics/pizza3.jpg" alt="woman making pizza">
-        <img src="pics/pizza4.jpg" alt="pizza image">
+        <img src="pics/pizza1.jpg" class="top-pizza-pics" alt="pizza image">
+        <img src="pics/pizza2.jpg" class="top-pizza-pics" alt="pizza image">
+        <img src="pics/pizza3.jpg" class="top-pizza-pics" alt="woman making pizza">
+        <img src="pics/pizza4.jpg" class="top-pizza-pics" alt="pizza image">
 
     </div>
 
-    <div .class="middle">
+    <div class="middle">
+
+      <div class="bold title">
+        <p>Sauciest Pizza of 42nd Ave</p>
+      </div>
+      <div id="video">
+        <iframe id="video" src="https://www.youtube.com/embed/wIK0PJnvm6U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
       <div class="right-column">
         <div id="reservations">
           <p>Reseration Policy</p>
           <p>We accept parties of 8 persons or less only. We are only able to accept two parties of 8 per evening. We are unable to accept parties larger than 8, as our dining room is too small and it impacts the flow of service. We will only accept one party of 8 on Fridays or Saturdays, before 5:30pm. We do not split larger parties to two tables.</p>
           <p>We encourage you to call ahead if you are a party of 4 or more. We can take reservations in advance or same day. Call 503-288-4899 for reservations.</p>
+          <br>
           <p>If you have questions about the reservation policy, please contact the owners at redsaucepizzapdx[@]gmail.com. Thanks for understanding!!</p>
 
         </div>
-        <img src ="img/pup.jpg" id="pup-pic" alt="happy pup">
+        <img src ="pics/pup.jpg" id="pup-pic" alt="happy pup">
 
       </div>
 
