rough mobile layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="middle">
 
-      <div class="bold title">
+      <div class="bold-title">
         <p>Sauciest Pizza of 42nd Ave</p>
       </div>
       <div id="video">
@@ -33,8 +33,8 @@
 
       <div class="right-column">
         <div id="reservations">
-          <p>Reseration Policy</p>
-          <p>We accept parties of 8 persons or less only. We are only able to accept two parties of 8 per evening. We are unable to accept parties larger than 8, as our dining room is too small and it impacts the flow of service. We will only accept one party of 8 on Fridays or Saturdays, before 5:30pm. We do not split larger parties to two tables.</p>
+          <p><strong>Reservation Policy</strong></p>
+          <p>We accept parties of <strong>8 persons</strong> or less only. We are only able to accept two parties of 8 per evening. We are unable to accept parties larger than 8, as our dining room is too small and it impacts the flow of service. We will only accept one party of 8 on Fridays or Saturdays, before 5:30pm. We do not split larger parties to two tables.</p>
           <p>We encourage you to call ahead if you are a party of 4 or more. We can take reservations in advance or same day. Call 503-288-4899 for reservations.</p>
           <br>
           <p>If you have questions about the reservation policy, please contact the owners at redsaucepizzapdx[@]gmail.com. Thanks for understanding!!</p>
@@ -50,8 +50,9 @@
     </div>
 
     <div class="bottom-bar">
-      <p>home | menu| pan pies | sourdough bread | fundraisers | say hi | our pals | swag </p>
-      <p>TAKE OUt 503-288-4899 | CLICK FOR DELIVERY</p>
+      <p class="red">home | menu| pan pies | sourdough bread | fundraisers | say hi | our pals | swag </p>
+      <br>
+      <p>TAKE OUT 503-288-4899 | <span class="red">CLICK FOR DELIVERY</span></p>
       <p>4935 NE 42ND Avenue, Portland, Oregon</p>
     </div>
 
