add media queries

--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/output.css">
-    <title>Red Sauce</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <title>Red Sauce Pizza</title>
   </head>
   <body>
 
     <div class="top-header">
-          <img src="pics/download.png" id="mini-menu" alt="menu">
-          <img src="pics/logo.png" id="top-logo "alt="red sauce logo">
-          <div>
-          </div>
+        <img src="pics/download.png" id="mini-menu" alt="menu">
+        <div id="delivery-takeout">
+          <img src="pics/take-out.png">
+          <img src="pics/delivery.png">
+        </div>
+        <img src="pics/logo.png" id="top-logo" alt="red sauce logo">
+      <div id="right-side-bar">
+        <p>pan pies  our pals  sourdough bread   fundraisers  say hi  swag  <span class="red">menu</span></p>
+      </div>
     </div>
 
     <div class="picture-display">
@@ -22,35 +28,58 @@
 
     </div>
 
+    <div class="video">
+      <p><h2><strong>Sauciest Pizza of 42nd Ave</strong></h2></p>
+      <br>
+
+
+    </div>
+
     <div class="middle">
 
-      <div class="bold-title">
-        <p>Sauciest Pizza of 42nd Ave</p>
-      </div>
-      <div id="video">
-        <iframe id="video" src="https://www.youtube.com/embed/wIK0PJnvm6U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+      <div id="left-column">
 
-      <div class="right-column">
-        <div id="reservations">
           <p><strong>Reservation Policy</strong></p>
           <p>We accept parties of <strong>8 persons</strong> or less only. We are only able to accept two parties of 8 per evening. We are unable to accept parties larger than 8, as our dining room is too small and it impacts the flow of service. We will only accept one party of 8 on Fridays or Saturdays, before 5:30pm. We do not split larger parties to two tables.</p>
           <p>We encourage you to call ahead if you are a party of 4 or more. We can take reservations in advance or same day. Call 503-288-4899 for reservations.</p>
           <br>
           <p>If you have questions about the reservation policy, please contact the owners at redsaucepizzapdx[@]gmail.com. Thanks for understanding!!</p>
 
-        </div>
         <img src ="pics/pup.jpg" id="pup-pic" alt="happy pup">
 
       </div>
 
-      <div class="left-column">
+      <div id="right-column">
+
+          <p><h3>Contact</h3></p>
+          <p><img src="pics/location.png"></p>
+          <p>4935 NE 42ND Avenue  |  Portland, Oregon</p>
+          <img src="pics/map.png" id="map" alt="map">
+          <p><img src="pics/contact.png"></p>
+          <p>503-288-4899</p>
+          <p>@redsaucepizza</p>
+          <br>
+
+          <img src="pics/fb-logo.png" alt="facebook logo">
+          <img src="pics/insta-logo.png" alt="instagram logo">
+
+
+          <p><span class="red">HOURS</span></p>
+          <p>Sunday-Thursday</p>
+          <p>4:30-9pm</p>
+          <p>Friday and Saturday</p>
+          <p>4:30-9pm</p>
+
+
       </div>
 
     </div>
 
+    <hr>
+
     <div class="bottom-bar">
-      <p class="red">home | menu| pan pies | sourdough bread | fundraisers | say hi | our pals | swag </p>
+      <div>
+      <p><span class="red">home | menu| pan pies | sourdough bread | fundraisers | say hi | our pals | swag</span></p>
       <br>
       <p>TAKE OUT 503-288-4899 | <span class="red">CLICK FOR DELIVERY</span></p>
       <p>4935 NE 42ND Avenue, Portland, Oregon</p>
