finish up readme

--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
 
     </div>
 
-    <div class="video">
-      <p><h2><strong>Sauciest Pizza of 42nd Ave</strong></h2></p>
-      <br>
-
-
-    </div>
 
     <div class="middle">
 
       <div id="left-column">
+          <p><h2><strong>Sauciest Pizza of 42nd Ave</strong></h2></p>
+          <br>
+          <img src="pics/pizza-video.png">
 
           <p><strong>Reservation Policy</strong></p>
           <p>We accept parties of <strong>8 persons</strong> or less only. We are only able to accept two parties of 8 per evening. We are unable to accept parties larger than 8, as our dining room is too small and it impacts the flow of service. We will only accept one party of 8 on Fridays or Saturdays, before 5:30pm. We do not split larger parties to two tables.</p>
